# nicotine-plugin-core

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  README.md  README.rst  __init__.py  base.py  generate-changelog.py  generate_changelog.py  pyproject.toml  release.sh  scripts.py  utils.py
.vim/: .vimrc
docs/source/: auxiliary-tree.rst  base.rst  changes.rst  command.rst  conf.py  config-base.rst  config-fields.rst  config.rst  core-tree.rst  index.rst  info.rst  installation.rst  logging.rst  requests.rst  scripts.rst  threading.rst  types.rst  utils.rst  version.rst
npc/: __init__.py  base.py  changes.py  command.py  config.py  info.py  logging.py  requests.py  threading.py  types.py  utils.py  version.py
