[tool.poetry]
name = "npc"
version = "0.3.0"
description = "A powerful core for building feature-rich Nicotine+ plugins with ease."
authors = ["Nachtalb <na@nachtalb.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff-lsp = "^0.0.54"
isort = "^5.13.2"
mypy = "^1.11.0"
ipdb = "^0.13.13"
pre-commit = "^3.7.1"


[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.7"
furo = "^2024.7.18"
furo-sphinx-search = { git = "https://github.com/harshil21/furo-sphinx-search" }
sphinx-paramlinks = "^0.6.0"
sphinx-copybutton = "^0.5.2"
sphinx-inline-tabs = "^2023.4.21"
sphinxcontrib-mermaid = "^0.9.2"
enum-tools = { extras = ["sphinx"], version = "^0.12.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
preview = true
target-version = ["py39"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.mypy]
python_version = "3.9"
show_error_codes = true
pretty = true
strict = true

[[tool.mypy.overrides]]
module = ["pynicotine.*", "sphinx.*"]
ignore_missing_imports = true

[tool.poetry.scripts]
build-docs = "scripts:build_docs"
open-docs = "scripts:open_docs"
check = "scripts:check"
build-changelog = "scripts:build_changelog"
release = "scripts:release"
change-version = "scripts:change_version"
